<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sens_analytics</name>
  <version>0.1.0</version>
  <description>Static STL analysis nodes and graph adapters for the Sens platform.</description>
  <maintainer email="engineering@sens.local">Sens Engineering</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sens_interfaces</depend>

  <exec_depend>python3-networkx</exec_depend>
  <exec_depend>python3-pydot</exec_depend>
  <exec_depend>graphviz</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
